fix function preview tooltips (#261) and reenable the jump-definition button for them (#262) (#337)

--- a/src/devtools/client/debugger/packages/devtools-reps/src/reps/reps.css
+++ b/src/devtools/client/debugger/packages/devtools-reps/src/reps/reps.css
@@ -271,6 +271,7 @@ button.open-inspector {
 button.jump-definition {
   display: inline-block;
   height: 16px;
+  width: 16px;
   margin-left: 0.25em;
   vertical-align: middle;
   border-color: transparent;
